# FileSwitch

./: CMakeLists.txt
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-20-fileswitch-implementation.md
docs/superpowers/specs/: 2026-04-20-fileswitch-design.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  startuplogger.cpp  startuplogger.h
src/network/: discovery.cpp  discovery.h  transfer.cpp  transfer.h
src/widgets/: acceptdialog.cpp  acceptdialog.h  devicewidget.cpp  devicewidget.h  filequeuewidget.cpp  filequeuewidget.h  progresswidget.cpp  progresswidget.h
tools/: diagnose_windows_startup.ps1
